# gtick

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  RELEASE-PROCESS  THANKS  TODO  autogen.sh  configure.ac  gtick.appdata.xml  gtick.desktop  gtick.spec
doc/: Makefile.am  NOTES  gtick.1
po/: .gitignore  LINGUAS  Makevars  POTFILES.in  af.po  ca.po  cs.po  da.po  de.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  hu.po  id.po  it.po  ko.po  nl.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sr.po  sv.po  uk.po  vi.po  zh_CN.po
rawmaterial/: tick5.raw
src/: .gitignore  Makefile.am  aboutlogo.xpm  converter.c  dsp.c  dsp.h  g711.c  g711.h  gettext.h  globals.h  gtick.c  gtkoptions.c  gtkoptions.h  gtkutil.c  gtkutil.h  help.c  help.h  icon48x48.xpm  icon64x64.xpm  metro.c  metro.h  option.c  option.h  optionlexer.h  optionlexer.l  optionparser.y  options.c  options.h  profiles.c  profiles.h  threadtalk.c  threadtalk.h  tickdata.c  util.c  util.h  visualtick.c  visualtick.h
testsuite/: .gitignore  Makefile.am  common.c  common.h  testdsp.c  testg711.c  testmetro-static.c  testmetro.c
